# memspy

./: .gitignore  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  build.bat  build.sh  imgui.ini
include/imgui/: imgui_hex.cpp
src/: DisassemblyView.cpp  DisassemblyView.h  MemoryHexWindow.cpp  MemoryHexWindow.h  MemoryRegions.cpp  MemoryRegions.h  MemoryRegionsView.cpp  MemoryRegionsView.h  MemoryScannerApp.cpp  MemoryScannerApp.h  Platform.h  Process.cpp  Process.h  ProcessHandle.cpp  ProcessHandle.h  ProcessList.cpp  ProcessList.h  ProcessSelectorWindow.cpp  ProcessSelectorWindow.h  ScanUtils.cpp  ScanUtils.h  ScannerWindow.cpp  ScannerWindow.h  imgui.ini  main.cpp
